--- a/style.css
+++ b/style.css
@@ -249,12 +249,9 @@ nav .img-fluid {
     width: 180px;
 }
 
-/* .page-wrapper{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-} */
-
+.next-lives{
+    padding: 10px 15em;
+}
 
 /* 1rst Carosulel item */
 
@@ -302,6 +299,7 @@ nav .img-fluid {
 .item-text-header{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 
 .header-item{
@@ -310,10 +308,6 @@ nav .img-fluid {
     width: 40%;
     justify-content: flex-start;
     text-align: initial;
-}
-
-.header-button {
-    width: 60%;
 }
 
 .header-button button{
@@ -331,7 +325,117 @@ nav .img-fluid {
     height: 700px;
 }
 
+/* carrousels body */
 
+.carousel {
+  background: rgba(245, 244, 244, 0);
+}
+
+.carousel-cell {
+    width: 28%;
+    height: 100%;
+    margin-right: 10px;
+    border-radius: 5px;
+    counter-increment: carousel-cell;
+}
+
+.carousel2{
+    padding: 1em;
+    height: 400px;
+}
+
+.flickity-viewport{
+    padding: 1em;
+    height: 100% !important;
+}
+
+/* cell number */
+.carousel-cell:before {
+  display: block;
+  text-align: center;
+  line-height: 200px;
+  font-size: 80px;
+  color: white;
+}
+
+
+.body-card{
+    display: flex;
+    flex-direction: row;
+}
+
+.bc-text{
+    width: 50%;
+    text-align: initial;
+}
+
+.bc-text2{
+    width: 50%;
+    text-align: end;
+}
+
+.flickity-prev-next-button.next {
+    right: 10px;
+}
+[type="button"]:not(:disabled), [type="reset"]:not(:disabled), [type="submit"]:not(:disabled), button:not(:disabled) {
+    cursor: pointer;
+}
+.flickity-prev-next-button {
+    /* top: 50%; */
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    transform: translateY(-50%);
+}
+.flickity-button {
+    position: relative;
+    background: hsla(0, 0%, 100%, 0.75);
+    border: none;
+    color: #333;
+}
+
+.flickity-page-dots {
+    position: absolute;
+    width: 100%;
+    bottom: -25px;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-align: center;
+    line-height: 1;
+    display: none !important;
+    height: 0px !important;
+}
+
+.foot-lives{
+    display: flex;
+    justify-content: center;
+    padding: 2em 10px;
+}
+
+.bt_cta:hover {
+    background-color: #000000;
+    border: 2px solid #000000;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+a:hover {
+    color: #0056b3;
+    text-decoration: underline;
+}
+.bt_cta {
+    background-color: #ffffff;
+    border-radius: 20px;
+    border: 2px solid #000000;
+    color: #000000;
+    text-align: center;
+    padding-top: 6px;
+    padding-bottom: 4px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-weight: 400;
+    text-decoration: none;
+}
 
 
 /* RESPONSIVE STYLES */
